add: package updates and bug fixes

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "new-report": "node progress-reports/generate-report.js",
-    "quick-report": "node progress-reports/generate-report.js quick"
-  },
+  "dev": "vite",
+  "build": "tsc -b && vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "report": "node public/progress-reports/generate-report.js",
+  "report:quick": "node public/progress-reports/generate-report.js quick"
+},
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
