--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
+    "netlify-deploy": "npm run build",
     "report": "node public/progress-reports/generate-report.js",
     "report:quick": "node public/progress-reports/generate-report.js quick"
   },
