--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "sharp": "^0.32.4",
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
