--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^24.1.0",
     "chart.js": "^4.5.0",
     "gray-matter": "^4.0.3",
+    "pdfjs-dist": "4.10.38",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
